- GF_DISINTEGRATION is back.
- yellow light blinds(GF_BLIND).
- INDIRECT_SUMMONING_RADIUS and STUPID_Q compile options, for the asking.
  (I spent hours to find out why hounds stopped breathing from corner ;)
- climbling up/down can fail when confused. (STAIR_FAIL_IF_CONFUSED)
- version strings(code is from Vim6.1a).
- client is very un*x/vi-user friendly now.


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack :)

==== below this line are the unfixed bugs known ====
[B] rebooting server always make floors disappear;
    monsters are preserved; only cave disappears.
[B] Self-reproducing black trap
[B] Panic save often enters into infinite loop.
[B] House doors still seem to crash sometimes.
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] CURSE_x does 100+ dmg on 50ft?
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
[B] /rec won't work if to wilderness? (admin)
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] log-file viewer(&6) leaves messy screen when done.
[B] [Bashing for beginners] contains 'Darkness Storm' etc.
[B] /dr cannot handle rings well.
[B] Macro stick sometimes

[B] 'I' or 'e' messes the screen inside stores (/* evil test */ stuff)

==== below this line are 'implementations' and not 'bugs' ====
(Don't 'fix' them!! ;)
+ sanity point is not shown
+ store beats price for non-*ID*ed items (esp.ego & randarts)
+ extra attack rings don't always give extra blows (esp.if heavy)
  (old ring{using pval} useless - sry I cannot help this. /wish?)
+ phase/recall may land you on water.
+ randarts lantern/torch may need fueling (and non-lit one doesn't give
  any resistances/abilities).

==== below this line are changes to be done in the future ====
[minor ones]
(3.3)
- recall-depth array for each dungeons/towers
- full colour-support in show_file
- quiver/tool slot (not a monster! ;)